# botDSNSHydrants

./: .gitignore  Makefile  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
deploy/: sample.env
deploy/backend/: Dockerfile
deploy/nginx/: local.Dockerfile  local.nginx.conf
deploy/postgres/: Dockerfile
src/: __init__.py
src/core/management/: __init__.py
src/core/management/commands/: __init__.py  init_project.py
src/core/services/: __init__.py  base_service.py
src/core/templates/elements/: base.html
src/hydrants/: admin.py  apps.py  dependencies.py  forms.py  models.py  urls.py  views.py
src/hydrants/migrations/: 0001_initial.py  0002_alter_hydrant_options_alter_owner_options_and_more.py  0003_hydrant_image.py  0004_alter_hydrant_owner_alter_hydrant_subdivision_and_more.py  0005_alter_subdivision_name.py  0006_hydrant_latitude_hydrant_longitude_and_more.py  0007_alter_hydrant_latitude_alter_hydrant_longitude.py  0008_alter_hydrant_latitude_alter_hydrant_longitude.py  0009_alter_hydrant_latitude_alter_hydrant_longitude.py
src/hydrants/services/: __init__.py  hydrants_service.py  import_service.py
src/hydrants/templates/hydrants/: index.html
src/telegram/: apps.py
src/telegram/bot/: __init__.py  endpoints.py  handlers.py  keyboards.py
